--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Results.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Results.cshtml
@@ -82,34 +82,38 @@
     <meta name="WT.oss_r" content="@Model.TotalLocalHits" />
 }
 
-<div class="search-results-wrapper grid-row">
-    <div class="hgroup column-full">
-        <h1 class="heading-xlarge sfa-no-bottom-margin">Search results</h1>
-        <div id="vacancy-result-summary">
-            <p id="result-message" class="sfa-small-bottom-margin">@Html.Raw(resultMessage)</p>
-            <p id="national-results-message" class="">@Html.Raw(nationalResultsMessage)</p>
-            @if (!string.IsNullOrEmpty(Model.VacancySearch.Location))
-            {
-                <p class="sfa-small-bottom-margin">
-                    <a id="receiveSaveSearchAlert" 
-                       href="@Url.ApprenticeshipSearchViewModelRouteUrl(CandidateRouteNames.ApprenticeshipSearchSaveSearch, new ApprenticeshipSearchViewModel(Model.VacancySearch))"
-                       onclick="Webtrends.multiTrack({ element: this, argsa: ['DCS.dcsuri', '/apprenticeships/receivealerts', 'WT.dl', '99', 'WT.ti', 'Search Results Receive Alerts'] })"><i class="fa fa-bell-o"></i>Receive alerts for this search</a>
-                </p>
-            }
+<div class="search-results-wrapper">
+    <div class="sfa-xxlarge-bottom-margin grid-row">
+        <div class="column-two-thirds">
+            <h1 class="heading-xlarge sfa-no-bottom-margin">Search results</h1>
+            <div id="vacancy-result-summary">
+                <p id="result-message" class="sfa-small-bottom-margin">@Html.Raw(resultMessage)</p>
+                <p id="national-results-message" class="">@Html.Raw(nationalResultsMessage)</p>
+                @if (!string.IsNullOrEmpty(Model.VacancySearch.Location))
+                {
+                    <p class="sfa-small-bottom-margin">
+                        <a id="receiveSaveSearchAlert"
+                           href="@Url.ApprenticeshipSearchViewModelRouteUrl(CandidateRouteNames.ApprenticeshipSearchSaveSearch, new ApprenticeshipSearchViewModel(Model.VacancySearch))"
+                           onclick="Webtrends.multiTrack({ element: this, argsa: ['DCS.dcsuri', '/apprenticeships/receivealerts', 'WT.dl', '99', 'WT.ti', 'Search Results Receive Alerts'] })"><i class="fa fa-bell-o"></i>Receive alerts for this search</a>
+                    </p>
+                }
+            </div>
         </div>
     </div>
+    
+    <div class="grid-row">
+        @using (Html.BeginRouteForm(CandidateRouteNames.ApprenticeshipResults, FormMethod.Get))
+        {
+            Html.Partial("ValidationSummary", ViewData.ModelState);
+            Html.RenderPartial("_searchUpdate", Model.VacancySearch);
 
-    @using (Html.BeginRouteForm(CandidateRouteNames.ApprenticeshipResults, FormMethod.Get))
-    {
-        Html.Partial("ValidationSummary", ViewData.ModelState);
-        Html.RenderPartial("_searchUpdate", Model.VacancySearch);
-
-        <section class="column-two-thirds">
-            <div id="pagedList">
-                @{ Html.RenderPartial("_searchResults", Model); }
-            </div>
-        </section>
-    }
+            <section class="column-two-thirds">
+                <div id="pagedList">
+                    @{ Html.RenderPartial("_searchResults", Model); }
+                </div>
+            </section>
+         }
+    </div>
 </div>
 
 <div class="saving-prompt toggle-content hide-nojs" id="ajaxLoading">
