--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_categories.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_categories.cshtml
@@ -23,7 +23,7 @@
                             var inputId = string.Format("category-{0}", category.CodeName.ToLower());
                             var checkedAttr = Model.Category == category.CodeName ? "checked" : "";
                             <li>
-                                <label for="@inputId" class="form-radio"><input @checkedAttr type="radio" name="Category" id="@inputId" value="@category.CodeName">@FullNameFormatter.Format(category.FullName)</label>
+                                <label for="@inputId" class="form-radio sfa-form-radio"><input @checkedAttr type="radio" name="Category" id="@inputId" value="@category.CodeName">@FullNameFormatter.Format(category.FullName)</label>
                             </li>
                         }
                     </ul>
@@ -37,7 +37,7 @@
                             var inputId = string.Format("category-{0}", category.CodeName.ToLower());
                             var checkedAttr = Model.Category == category.CodeName ? "checked" : "";
                             <li>
-                                <label for="@inputId" class="form-radio"><input @checkedAttr type="radio" name="Category" id="@inputId" value="@category.CodeName">@FullNameFormatter.Format(category.FullName)</label>
+                                <label for="@inputId" class="form-radio sfa-form-radio"><input @checkedAttr type="radio" name="Category" id="@inputId" value="@category.CodeName">@FullNameFormatter.Format(category.FullName)</label>
                             </li>
                         }
                     </ul>
