RA-555: Adding form ids for find an apprenticeship

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Settings.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Settings.cshtml
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-@using (Html.BeginRouteForm(CandidateRouteNames.Settings, FormMethod.Post))
+@using (Html.BeginRouteForm(CandidateRouteNames.Settings, FormMethod.Post, new { id = "settings-form" }))
 {
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
