--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/VerifyUpdatedEmailAddress.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/VerifyUpdatedEmailAddress.cshtml
@@ -19,7 +19,7 @@
     your address.
 </p>
 
-@using (Html.BeginRouteForm(RouteNames.VerifyUpdatedEmail, FormMethod.Post, new {autocomplete = "off"}))
+@using (Html.BeginRouteForm(RouteNames.VerifyUpdatedEmail, FormMethod.Post, new {id = "verify-updated-email-form", autocomplete = "off"}))
 {
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
