--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Results.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Results.cshtml
@@ -99,7 +99,7 @@
         </div>
     </div>
 
-    @using (Html.BeginRouteForm(CandidateRouteNames.ApprenticeshipResults, FormMethod.Get))
+    @using (Html.BeginRouteForm(CandidateRouteNames.ApprenticeshipResults, FormMethod.Get, new { id = "apprenticeship-results-form" }))
     {
         Html.Partial("ValidationSummary", ViewData.ModelState);
         Html.RenderPartial("_searchUpdate", Model.VacancySearch);
