--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Home/Feedback.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Home/Feedback.cshtml
@@ -11,7 +11,7 @@
     <p>If you're looking for help then <a href="@Url.RouteUrl(CandidateRouteNames.Helpdesk)">contact us</a> instead.</p>
 </div>
 
-@using (Html.BeginRouteForm(CandidateRouteNames.Feedback, FormMethod.Post))
+@using (Html.BeginRouteForm(CandidateRouteNames.Feedback, FormMethod.Post, new { id = "feedback-form" }))
 {
     @Html.AntiForgeryToken()
     @Html.FormTextFor(
