--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_Apply.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/_Apply.cshtml
@@ -43,5 +43,5 @@ else if (Model.VacancyStatus == VacancyStatuses.Live)
 
 @if (Model.VacancyStatus == VacancyStatuses.Live)
 {
-    <p id="vacancy-closing-date" class="copy-16">Closing date: @Model.ClosingDate.ToFriendlyClosingToday()</p>
+    <p id="vacancy-closing-date" class="font-xsmall">Closing date: @Model.ClosingDate.ToFriendlyClosingToday()</p>
 }
