--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     {
         <div id="global-cookie-message" class="cookie-banner">
             <div class="content-container" role="alert">
-                <span class="copy-16">GOV.UK uses cookies to make the site simpler. <a href='@Url.RouteUrl("Privacy")'>Find out more about cookies</a></span>
+                <span class="font-xsmall">GOV.UK uses cookies to make the site simpler. <a href='@Url.RouteUrl("Privacy")'>Find out more about cookies</a></span>
             </div>
         </div>
     }
