--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Settings.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Settings.cshtml
@@ -6,14 +6,14 @@
 }
 <div class="panel-success toggle-content" id="nextProviderBanner">
     <div class="text">
-        <div class="copy-16">
+        <div class="font-xsmall">
             <p>Take a moment to fill in your contact details.</p>
         </div>
     </div>
 </div>
 <div class="panel-success toggle-content" id="userInfoSaved">
     <div class="text">
-        <div class="copy-16">
+        <div class="font-xsmall">
             <p><i class="fa fa-check"></i>Your contact details have been saved</p>
         </div>
     </div>
