--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Account/Index.cshtml
@@ -35,7 +35,7 @@
                 <a id="dismiss-traineeship-prompts-link" 
                    class="notInterested link-unimp icon-black" 
                    href="@Url.RouteUrl(CandidateRouteNames.DismissTraineeshipPrompts)"
-                   onclick="Webtrends.multiTrack({ element: this, argsa: ['DCS.dcsuri', '/traineeships/promptdecline', 'WT.dl', '99', 'WT.ti', 'Traineeship Prompt Declined'] })"><i class="copy-16 fa fa-times-circle"></i>Don't show me this again</a>
+                   onclick="Webtrends.multiTrack({ element: this, argsa: ['DCS.dcsuri', '/traineeships/promptdecline', 'WT.dl', '99', 'WT.ti', 'Traineeship Prompt Declined'] })"><i class="font-xsmall fa fa-times-circle"></i>Don't show me this again</a>
             </p>
         </div>
     </div>
