--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/_workExperiencesJS.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/_workExperiencesJS.cshtml
@@ -84,7 +84,7 @@
                                 </div>
                                 <div class="work-delete ta-center">
                                     <span class="cell-span">
-                                        <i class="copy-16 fa fa-times-circle icon-black remove-work-experience-link" data-bind="click: $parent.removeWorkExperience"></i>
+                                        <i class="font-xsmall fa fa-times-circle icon-black remove-work-experience-link" data-bind="click: $parent.removeWorkExperience"></i>
                                         <i class="visuallyhidden">Remove</i>
                                     </span>
                                 </div>
