--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Home/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Home/Index.cshtml
@@ -46,11 +46,11 @@
     <section class="column-one-third gov-border">
         <br>
         <h2 class="heading-medium">Apprenticeships, 14 to 19 education and training for work</h2>
-        <p class="copy-16"><a href="https://www.gov.uk/apprenticeships-guide">Becoming an apprentice</a></p>
+        <p class="font-xsmall"><a href="https://www.gov.uk/apprenticeships-guide">Becoming an apprentice</a></p>
         <br>
         <h2 class="heading-medium">Elsewhere on the web</h2>
-        <p class="copy-16 sfa-small-bottom-margin"><a href="https://nationalcareersservice.direct.gov.uk/advice/courses/typesoflearning/Pages/apprenticeship-application-help.aspx" rel="external" target="_blank">Help with your application</a></p>
-        <p class="copy-16"><a href="/trainee/overview.html">Traineeship opportunities</a></p>
+        <p class="font-xsmall sfa-small-bottom-margin"><a href="https://nationalcareersservice.direct.gov.uk/advice/courses/typesoflearning/Pages/apprenticeship-application-help.aspx" rel="external" target="_blank">Help with your application</a></p>
+        <p class="font-xsmall"><a href="/trainee/overview.html">Traineeship opportunities</a></p>
     </section>
 </div>
 
