--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/_Layout.cshtml
@@ -92,7 +92,7 @@
     {
         <div id="global-cookie-message" class="cookie-banner">
             <div class="content-container" role="alert">
-                <span class="copy-16">GOV.UK uses cookies to make the site simpler. <a href='@Url.RouteUrl(CandidateRouteNames.Privacy)'>Find out more about cookies</a></span>
+                <span class="font-xsmall">GOV.UK uses cookies to make the site simpler. <a href='@Url.RouteUrl(CandidateRouteNames.Privacy)'>Find out more about cookies</a></span>
             </div>
         </div>
     }
