--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipApplication/_trainingCoursesJS.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipApplication/_trainingCoursesJS.cshtml
@@ -69,7 +69,7 @@
                                 </div>
                                 <div class="training-delete ta-center">
                                     <span class="cell-span">
-                                        <i class="copy-16 fa fa-times-circle icon-black remove-training-history-item-link" data-bind="click: $parent.removeTrainingCourse"></i>
+                                        <i class="font-xsmall fa fa-times-circle icon-black remove-training-history-item-link" data-bind="click: $parent.removeTrainingCourse"></i>
                                         <i class="visuallyhidden">Remove</i>
                                     </span>
                                 </div>
