--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
@@ -169,6 +169,22 @@ Custom form elements
 }
 
 /* -------------------------------------------------------------------
+Categories and sub-categories
+------------------------------------------------------------------- */
+
+ul#category-list {
+    li {
+        overflow:hidden;
+        details {
+            padding-left:22px;
+            ul {
+                position:relative;
+            }
+        }
+    }
+}
+
+/* -------------------------------------------------------------------
 Tabbed content
 ------------------------------------------------------------------- */
 
@@ -182,7 +198,6 @@ Tabbed content
 /* -------------------------------------------------------------------
 Custom Typography
 ------------------------------------------------------------------- */
-
 
 
 /* -------------------------------------------------------------------
